fix icon alignments, cursor permanent visibility and space between counters and cursor

--- a/css/workspace-style.css
+++ b/css/workspace-style.css
@@ -37,7 +37,7 @@
 }
 
 .workspace-tr {
-	height: 50px;
+	height: 52px;
 	padding: 5px;
 }
 .workspace-tr:hover {
@@ -57,8 +57,8 @@
 	min-width: 35px !important;
 	border-radius: 50%;
 	padding: 0px;
-	margin-top: 10px !important;
-	margin-right: 14px !important;
+	margin-top: auto !important;
+	margin-bottom: auto !important;
 }
 
 .color-picker:hover {
@@ -70,9 +70,28 @@
 .titles-for-space {
 	font-weight: bold;
 	font-size: 20px;
-	margin-top: 10px;
+	margin-top: auto;
+	margin-bottom: auto;
 }
 
 .user-counter {
 	margin-right: 5px;
+}
+
+/* hooks navigation NC 27 */
+.workspace-sidebar h2, .workspace-sidebar .app-navigation-caption{
+	margin-top: 0 ! important;
+	margin-bottom: 0 ! important;
+}
+
+.workspace-sidebar .app-navigation-entry__title .app-navigation-entry__utils {
+	margin-right: 30px;
+}
+
+.workspace-sidebar .counter-bullet {
+	margin-right: 30px;
+}
+/* force toggle visibility */
+.workspace-sidebar .icon-collapse {
+	visibility: visible !important;
 }
